src/main/resources/Krakatau-master/tests/assembler/bad/badescapes3.j
.class public '\u3'
.super java/lang/Object
.end class